--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/trainadmindb
 spring.datasource.username=root
 spring.datasource.password=rootpassword
+kafka.bootstrap.servers=localhost:9092
+train_capacity_update.topic=train.capacity.update
 #spring.thymeleaf.template-loader-path: classpath:/templates
 #spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
